# Computer-Architecture-Engineering-of-PKU

./: .gitignore  .gitmodules  README.md
lab1/: dhrystone_statistic.xlsx  lab1_report.docx  lab1_report.md  whetstone_statistics.xlsx  ~$b1_report.docx
lab1/CBenchmark/: CMakeLists.txt  prof.sh
lab1/CBenchmark/src/: CMakeLists.txt  ackermann.cpp  fast_random.h  gemm.cpp  quick_sort.cpp
lab1/JavaBenchmark/: ackermann.java  gemm.java  quick_sort.java
lab1/dhrystone-2.1/: Makefile  cc_dry2  cc_dry2reg  dhry.h  dhry_1.c  dhrystone_profile.sh  gcc_dry2  gcc_dry2reg  log.txt
lab1/whetstone/: icc_whetstone  icc_whetstone.sh  makefile  whetstone_300000.csv  whetstone_300000.xlsx  whetstone_profile.sh  whetstone_profile2.sh
lab2/: lab2-模拟器设计.docx  lab2_report.md  pipeline.pptx
lab3/: associativity.groupby.ipynb  associativity.trace1.groupby.xlsx  associativity.trace2.groupby.xlsx  cacti65.tgz  lab3_report.md  policy.trace1.csv  policy.trace2.csv  trace2017.rar
lab3/.ipynb_checkpoints/: associativity.groupby-checkpoint.ipynb
lab4/: lab4_report.md  statistics.xlsx
slices/: 1802_性能评测.pptx  体系实习-实践内容-全.doc  体系实习-教学大纲-2020春季学期.doc
